1.0-devel
=====================

 * Changed permission of ATNewsItem.EditableBody() to ModifyPortalContent.
   [tiran]

 * Added some tabs to the ZMI view of the portal_atct tool: Overview, rescale
   migrate and recatalog. The usage of the external methods is deprecated in
   favor of the tool.
   [tiran]

 * Restored Plone 2.0.x compatibility.
   [dtremea]

 * Don't show PloneSite, TempFolder and criteria in constrain types list.
   [tiran]

 * Disabled validator for ATEvent's phone field. Some people have reported that
   they have issues because numbers and especially extensions are handle
   differently in every country. Also see [ 974102 ] Can't enter phone extension
   in phone number field.
   [tiran]

 * Added XXX report tool to ATCT. It's mostly a copy from the Zope3 XXX tools.
   Note: XXX is a marker to show "here is something" wrong. It's not porn. :)
   The tool also reports TODO and BBB (for backward compatibility).
   [tiran]

 * Fixed [ 1049018 ] url field on Link doesn't allow mailto. Also added an
   isMailto validator to validation and enhanced the isUrl validator to support
   more protocols.
   [tiran]

 * Fixed [ 1114696 ] use correct mimetype for reStructuredText and [ 1122135 ]
   ATCT edit not preserving text type selection, not ATCT bug be renaming
   text/restructured to text/x-rst.
   [tiran]

 * Fixed [ 1158950 ] ATTopic default view wrong. This fix needs also a svn up
   of CMFPlone 2.1.
   [tiran]

 * Moved external storage based variants for ATFile and ATImage to a seperate
   module. They won't make it in the official trunk unless the storage is
   working well and the types are tested.
   [tiran]

 * Added 'atct_album_view' and 'atct_album_image' templates based on the
   templates of CMFPhotoAlbum.
   [tiran]

 * Replaced the config vars for permissions with new permissions:

    o ModifyConstrainTypes for constrain types mixin
    o ModifyViewTemplate for template mixin
    o ViewHistory for history mixin